--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors{
-        free{
+    productFlavors {
+        free {
             applicationId "com.udacity.gradle.builditbigger.free"
         }
-        paid{
+        paid {
             applicationId "com.udacity.gradle.builditbigger.paid"
         }
     }
@@ -32,7 +32,8 @@ dependencies {
     compile project(":jokeslib")
     compile project(":jokesdisplaylib")
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:design:23.3.0'
     freeCompile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'com.android.support:appcompat-v7:23.0'
+    compile 'com.android.support:design:23.3.0'
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
